--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: url("/images/pokemon-background.png");
+  background-size: 100% auto;
+  background-repeat: repeat-y;
+  background-attachment: scroll;
+  background-position: center top;
+}
